final marketing analysis comments

--- a/marketing_analysis.ipynb
+++ b/marketing_analysis.ipynb
@@ -26,8 +26,7 @@
     "\n",
     "Marketing Return on Investment:\n",
     "1. Compare CPAs for Tik Tok vs. Email \n",
-    "2. Which marketing campaigns had the highest conversions?\n",
-    "3. Which demographic had the highest sales as a result of all marketing efforts?"
+    "2. Which marketing campaigns had the highest conversions?"
    ]
   },
   {
@@ -1083,71 +1082,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Location Customer_Segment  Segment_Count  SUM_Previous_Purchase_Amt\n",
-      "0        Missouri       Adult Male             22                        665\n",
-      "1       Minnesota       Adult Male             22                        606\n",
-      "2         Montana       Adult Male             19                        594\n",
-      "3        Delaware       Adult Male             25                        586\n",
-      "4          Nevada       Adult Male             23                        566\n",
-      "..            ...              ...            ...                        ...\n",
-      "95  New Hampshire       Young Male              2                         35\n",
-      "96     New Jersey       Young Male              2                         34\n",
-      "97  Massachusetts       Young Male              2                         32\n",
-      "98        Vermont       Young Male              2                         19\n",
-      "99       Kentucky       Young Male              3                         14\n",
-      "\n",
-      "[100 rows x 4 columns]\n"
-     ]
-    }
-   ],
    "source": [
-    "#Marketing ROI #3: Which demographic had the highest sales?\n",
+    "Summary Findings\n",
     "\n",
-    "conn = sqlite3.connect('cl_shopper_trends.db')\n",
-    "cursor = conn.cursor()\n",
+    "It looks like your highest sales come from Adult Males who live in the following states:\n",
+    "1. Delaware \n",
+    "2. New Mexico \n",
+    "3. Wyoming \n",
+    "4. Alaska\n",
+    "5. Connecticut \n",
     "\n",
-    "marketing_roi_3 = '''\n",
-    "SELECT\n",
-    "    Location,\n",
-    "    CASE\n",
-    "        WHEN Age < 30 AND Gender = 'Male' THEN 'Young Male'\n",
-    "        WHEN Age >= 30 AND Gender = 'Male' THEN 'Adult Male'\n",
-    "        ELSE 'Other'\n",
-    "    END AS Customer_Segment,\n",
-    "    COUNT(CASE\n",
-    "            WHEN Age < 30 AND Gender = 'Male' THEN 'Young Male'\n",
-    "            WHEN Age >= 30 AND Gender = 'Male' THEN 'Adult Male'\n",
-    "            ELSE 'Other'\n",
-    "          END) AS Segment_Count,\n",
-    "    SUM(Previous_Purchases) AS SUM_Previous_Purchase_Amt\n",
-    "FROM\n",
-    "    merged_data\n",
-    "GROUP BY\n",
-    "    Location, Customer_Segment\n",
-    "ORDER BY \n",
-    "    SUM_Previous_Purchase_Amt DESC;\n",
+    "I would focus on putting marketing campaign spend towards Welcome campaigns for both TikTok and Email to incentivize new users with a discount code. I would incentivize returning users with Frequency Purchaser discount code. This is great for engaging and retaining existing high value customers. Line up these campaigns with months that have historical performed well with generating sales (May, June, July, August, October, November).\n",
     "\n",
-    "'''\n",
-    "\n",
-    "marketing_roi_3 = pd.read_sql(marketing_roi_3, conn)\n",
-    "print(marketing_roi_3)\n",
+    "We could take this analysis a step further by analyzing sales data by state to understand customer segments further, and analyzing website traffic to see how \n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Our top sales segments includes: Adult Males from Missouri, Minnesota and Montana. "
-   ]
+   "source": []
   }
  ],
  "metadata": {
