final markdown comments

--- a/marketing_analysis.ipynb
+++ b/marketing_analysis.ipynb
@@ -1096,8 +1096,7 @@
     "\n",
     "I would focus on putting marketing campaign spend towards Welcome campaigns for both TikTok and Email to incentivize new users with a discount code. I would incentivize returning users with Frequency Purchaser discount code. This is great for engaging and retaining existing high value customers. Line up these campaigns with months that have historical performed well with generating sales (May, June, July, August, October, November).\n",
     "\n",
-    "We could take this analysis a step further by analyzing sales data by state to understand customer segments further, and analyzing website traffic to see how \n",
-    "\n"
+    "We could take this analysis a step further by analyzing sales data by state to understand customer segments by location, and analyzing website traffic to see how customer segments (Adult Male, Bi-Weekly buyer, etc.) aligns with purchasing behavior for this e-commerce company.  "
    ]
   },
   {
